Add central place for Forge to obtain a privileged Lookup object, to be used by SecureJarHandler and friends